--- a/src/Styles/mainStyles.css
+++ b/src/Styles/mainStyles.css
@@ -547,7 +547,11 @@
     -ms-transform: scale(1.3);
     transform: scale(1.3)
 }
-
+._loaded_91hw8 img{
+    width: 60vw;
+    height: auto;
+    margin-top: 80% !important;
+}
 ._centered_94k9d_13 {
     margin: 0 auto
 }
@@ -2430,6 +2434,7 @@ button.swiper-pagination-bullet {
 }
 
 ._footer_iud9y_32 {
+    text-align: right;
     font-size: 12px;
     font-weight: 590;
     line-height: 20px;
@@ -2460,6 +2465,7 @@ button.swiper-pagination-bullet {
 }
 
 ._details_iud9y_56 {
+    text-align: right;
     margin-left: auto;
     padding-left: 14px;
     font-size: 16px;
@@ -3060,12 +3066,13 @@ button.swiper-pagination-bullet {
     top: 375px;
     height: 8vw;
     margin: 0 0 0 0;
-    background: #131313;
+    background: #242424;
     border-radius: 8px;
+    text-align: center;
 }
 
 .slider_if819-active{
-    background: #242424;
+    background: #131313;
 }
 
 /* 8,312 steps done */
@@ -3134,10 +3141,10 @@ opacity: 0.55;
 
 /* 8,312 steps done */
 .box_text1060 {
+    text-align: center;
     height: 100%;
     line-height: 12px;
     font-size: 10px;
     align-items: center;
-    text-align: center;
     color: #242424;
 }
