--- a/src/Styles/mainStyles.css
+++ b/src/Styles/mainStyles.css
@@ -66,6 +66,10 @@
     transition-duration: .3s
 }
 
+._game_background981{
+    z-index: 0;
+}
+
 ._root_oar9p_1 img {
     width: 26px
 }
@@ -1506,7 +1510,8 @@ button.swiper-pagination-bullet {
 ._gameView_1cr97_1 {
     padding-bottom: 82px;
     overflow-y: auto;
-    height: 100%
+    height: 100%;
+    background: #131313;
 }
 
 ._navbar_1cr97_7 {
@@ -2390,9 +2395,15 @@ button.swiper-pagination-bullet {
     width: 100%;
     height: 100%;
     -o-object-fit: cover;
-    object-fit: cover
+    object-fit: cover;
+    margin-top: 0 !important;
 }
-
+._game_start87{
+    margin-left: 35%;
+    margin-top: 5%;
+    width: 100px !important;
+    height: auto !important;
+}
 ._body_iud9y_25 {
     display: -webkit-box;
     display: -webkit-flex;
@@ -3052,6 +3063,35 @@ button.swiper-pagination-bullet {
     align-items: center;
     background: #242424;
     border-radius: 16px;
+}
+.box_rectangle19{
+    margin-top: 5%;
+    width: 100%;
+    background: #242424;
+    border-radius: 20px;
+    position: relative;
+}
+.box_rectangle19 img{
+    margin-top: 0!important;
+}
+
+._game_bananes_781{
+    position: absolute;
+    font-size: 4vw;
+    color: black;
+    bottom: 10px; /* Відступ знизу */
+    left: 10px;
+    font-weight: 500;
+}
+
+._left_game_bananes{
+    width: 18.42px !important;
+    height: auto;
+    position: absolute;
+    bottom: 15px; /* Відступ знизу */
+    right: 40px;
+    font-size: 3vw;
+    color: black;
 }
 
 .slider-bar{
