--- a/src/doubleJump_Game/game.css
+++ b/src/doubleJump_Game/game.css
@@ -1,19 +1,26 @@
 
 body{
     overflow: hidden;
+    user-select: none;
 }
 
 .grid {
     overflow: hidden;
     width: 100%;
     height: 100vh;
-    border-radius: 10px;
     border-color: white;
     position: relative;
     font-size: 200px;
     text-align: center;
 }
 
+.grid img{
+    width: 100%;
+    height: auto;
+}
+._gameText_889{
+    display: flex;
+}
 .doodler {
     width: 80px;
     height: auto;
@@ -25,22 +32,25 @@ body{
     height: auto;
 }
 .platform {
+    user-select: none;
     width: 65px;
     height: 20px;
     position: absolute;
     border-radius: 1px;
 }
-
+.platform img{
+    max-width: 90%;
+}
 .instructions {
     display: flex;
-    font-size: 20px;
+    font-size: 25px;
+    font-weight: 700;
     margin: 0.7em;
     height: 50px;
     text-align: center;
     justify-content:center;
     align-items:center;
-    color: black;
-    background-color: white;
+    color: #F6F6F6;
     border-radius: 10px;
     line-height: 1.5;
 }
@@ -50,11 +60,55 @@ body{
 .score {
     user-select: none;
     text-align: center;
-    font-size: 12vw;
-    color: white;
-    top: 10px;
-    width: 100%;
+    font-size: 6vw;
+    color: #131313;
+    margin-top: 10px;
+    width: 80px;
+    height: 30px;
     border-radius: 10px;
     margin-right: 0.5em;
     z-index: 10000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 10px;
+    right: 20px;
 }
+.timer {
+    flex: 1 90px;
+    border: 1px solid #131313;
+    color: #131313;
+    border-radius: 30px;
+    user-select: none;
+    text-align: center;
+    font-size: 18px;
+    margin-top: 10px;
+    margin-left: 10px;
+    width: 90px;
+    height: 30px;
+    z-index: 10000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+@keyframes pointsAnimation {
+    0% { transform: translateY(0); opacity: 1; }
+    100% { transform: translateY(-20px); opacity: 0; }
+}
+
+.points {
+    position: absolute;
+    font-size: 20px;
+    font-weight: bold;
+    color: #F6F6F6;
+    animation: pointsAnimation 1s forwards;
+    z-index: 10;
+    pointer-events: none;
+}
+
