--- a/src/Styles/mainStyles.css
+++ b/src/Styles/mainStyles.css
@@ -3101,7 +3101,7 @@ button.swiper-pagination-bullet {
 }
 
 .slider_if819{
-    padding:0 15% 0 15%;
+    padding:5px 15% 0 15%;
     left: calc(50% - 172px/2 + 83.5px);
     top: 375px;
     height: 8vw;
