--- a/src/Styles/mainStyles.css
+++ b/src/Styles/mainStyles.css
@@ -21,6 +21,12 @@
     width: 100%
 }
 
+._exclusive_font{
+    font-family: 'AlphabetSoup', sans-serif;
+    font-weight: 900 !important;
+
+}
+
 ._symbol_eubs4_9 {
     font-size: 20px;
     font-style: normal;
