--- a/src/Styles/mainStyles.css
+++ b/src/Styles/mainStyles.css
@@ -24,9 +24,14 @@
 ._exclusive_font{
     font-family: 'AlphabetSoup', sans-serif;
     font-weight: 900 !important;
-
 }
-
+@font-face {
+    font-family: 'AlphabetSoup';
+    src: url('../assets/fonts/Alphabet Soup.ttf') format('woff2'),
+    url('../assets/fonts/Alphabet Soup.ttf') format('woff');
+    font-weight: 900;
+    font-style: normal;
+}
 ._symbol_eubs4_9 {
     font-size: 20px;
     font-style: normal;
