--- a/src/Styles/mainStyles.css
+++ b/src/Styles/mainStyles.css
@@ -1525,6 +1525,7 @@ button.swiper-pagination-bullet {
 ._gameView_1cr97_1 {
     padding-bottom: 82px;
     overflow-y: auto;
+    overflow-x: hidden;
     height: 100%;
     background: #131313;
 }
