--- a/src/Styles/mainStyles.css
+++ b/src/Styles/mainStyles.css
@@ -1407,7 +1407,7 @@ button.swiper-pagination-bullet {
 ._copy-white_pa08af{
     width: 40%;
     border: 1px solid #F6F6F6;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: #131313;
     color: white;
    }
 
