--- a/src/Styles/mainStyles.css
+++ b/src/Styles/mainStyles.css
@@ -510,7 +510,7 @@
     text-decoration: none;
 }
 ._button_1pxmk_91{
-    width: 72px;
+    width: auto;
     font-size: 14px;
     font-weight: bold;
     background-color: rgba(255, 255, 255, 0.2);
