--- a/src/Styles/mainStyles.css
+++ b/src/Styles/mainStyles.css
@@ -511,7 +511,7 @@
 }
 ._button_1pxmk_91{
     width: auto;
-    font-size: 14px;
+    font-size: 3.7vw;
     font-weight: bold;
     background-color: rgba(255, 255, 255, 0.2);
     border: 1px solid rgba(0, 0, 0, 0.2);
